Attempt to fix focus issue on mobile devices

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -86,7 +86,9 @@ h1 {
   color: white;
 }
 
-
+.modal-highlight:focus {
+  border: none;
+}
 
 
 .App-link {
